prevent layout from shifting when scrollbar show up

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  overflow: auto;
+  overflow-y: scroll;
 }
 
 .logo {
